AJustes na gravaçaõ do usuario

--- a/TSmartClinic.Presentation/Views/Home/Index.cshtml
+++ b/TSmartClinic.Presentation/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
 }
 @{
    
-    var teste = usuarioLogadoService.TipoUsuario;
-    var teste2 = usuarioLogadoService.NomeCliente;
-    var teste3 = usuarioLogadoService.UsuarioMaster;
-    var teste4 = usuarioLogadoService.UsuarioLogadoId;
-    var teste5 = usuarioLogadoService.ClienteId;
-    var teste6 = usuarioLogadoService.NichoClienteId;
+    var TipoUsuario = usuarioLogadoService.TipoUsuario;
+    var NomeCliente = usuarioLogadoService.NomeCliente;
+    var UsuarioMaster = usuarioLogadoService.UsuarioMaster;
+    var UsuarioLogadoId = usuarioLogadoService.UsuarioLogadoId;
+    var ClienteId = usuarioLogadoService.ClienteId;
+    var NichoClienteId = usuarioLogadoService.NichoClienteId;
 }
 
 
@@ -84,14 +84,12 @@
 </div>
 
 <div>
-
-
-    <span class="fw-bold text-uppercase mb-1">teste: @teste</span>
-    <span class="fw-bold text-uppercase mb-1">teste2: @teste2</span>
-    <span class="fw-bold text-uppercase mb-1">teste3: @teste3</span>
-    <span class="fw-bold text-uppercase mb-1">teste4: @teste4</span>
-    <span class="fw-bold text-uppercase mb-1">teste5: @teste5</span>
-    <span class="fw-bold text-uppercase mb-1">teste6: @teste6</span>
+    <span class="fw-bold text-uppercase mb-1">TipoUsuario: @TipoUsuario</span></br>
+    <span class="fw-bold text-uppercase mb-1">NomeCliente: @NomeCliente</span></br>
+    <span class="fw-bold text-uppercase mb-1">UsuarioMaster: @UsuarioMaster</span></br>
+    <span class="fw-bold text-uppercase mb-1">UsuarioLogadoId: @UsuarioLogadoId</span></br>
+    <span class="fw-bold text-uppercase mb-1">ClienteId: @ClienteId</span></br>
+    <span class="fw-bold text-uppercase mb-1">NichoClienteId: @NichoClienteId</span></br>
 </div>
 
 <!-- Chart.js -->
