--- a/TSmartClinic.Presentation/Views/Usuarios/Consulta.cshtml
+++ b/TSmartClinic.Presentation/Views/Usuarios/Consulta.cshtml
@@ -72,6 +72,8 @@
                 <thead class="table-header">
                     <tr>
                         <th class="col-md-3" width="200">Nome</th>
+                        <th class="col-md-3" width="200">Emai</th>
+                        <th class="col-md-3" width="200">Perfil</th>
                                  
                     </tr>
                 </thead>
@@ -82,6 +84,10 @@
                         {
                             <tr class="clickable" onclick="javascript:location.href='Cadastro/@item.Id'">
                                 <td>@item.Nome?.ToUpper()</td>
+                                <td>@item.Email?.ToUpper()</td>
+                                <td>@item.UsuarioClientePerfil.FirstOrDefault()?.Perfil?.NomePerfil</td>
+
+
                             </tr>
                         }
                     }
