--- a/TSmartClinic.Presentation/Views/Account/PrimeiroAcesso.cshtml
+++ b/TSmartClinic.Presentation/Views/Account/PrimeiroAcesso.cshtml
@@ -4,7 +4,7 @@
 
 @using Microsoft.AspNetCore.Antiforgery
 @inject IAntiforgery Antiforgery
-@model TSmartClinic.Presentation.Models.PrimeiroAcessoViewModel
+@model TSmartClinic.Presentation.Models.ResetSenhaEPrimeiroAcessoViewModel
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
